Fix small issues of ListTable (#113)
* Fix the position of TablePagination.

* Prevent the page getting stretched.

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -3,6 +3,8 @@ body {
   padding: 0;
   font-family: 'Roboto', 'sans-serif';
   background-color: #eee;
+  overflow-x: hidden;
+  max-width: 100%;
 }
 
 #main-container {
